# rspdf

./: Cargo.toml  README.md
pdf/: Cargo.toml
pdf/src/: catalog.rs  character.rs  crypto.rs  document.rs  error.rs  errors.rs  lexer.rs  lib.rs  object.rs  page.rs  pagetree.rs  reader.rs  security.rs  token.rs  xref.rs
pdf/src/canvas/: color.rs  graphics_state.rs  image_info.rs  matrix.rs  mod.rs  operation.rs  parser.rs  path.rs  path_info.rs  processor.rs  text_info.rs
pdf/src/color/: cal_gray.rs  cal_rgb.rs  common.rs  device_cmyk.rs  device_gray.rs  device_rgb.rs  devicen.rs  icc_based.rs  icc_profile.rs  iccbased.rs  indexed.rs  lab.rs  mod.rs  pattern.rs  separation.rs  value.rs
pdf/src/device/: cairo.rs  image_device.rs  mod.rs  text.rs  trace.rs
pdf/src/filter/: ascii85_decode.rs  ascii_85.rs  ascii_hex.rs  asciihex_decode.rs  ccittfax_decode.rs  dct.rs  dct_decode.rs  flate.rs  flate_decode.rs  jbig2.rs  lzw.rs  mod.rs  run_length.rs
pdf/src/font/: afm.rs  builtin.rs  builtin_font.rs  charcode_to_unicode.rs  charinfo.rs  cid_font.rs  cmap.rs  composite_font.rs  descriptor.rs  encoding.rs  font_descriptor.rs  font_program.rs  ft_font.rs  glyph_name.rs  mod.rs  open_type_program.rs  pdf_font.rs  simple_font.rs  to_unicode.rs  truetype.rs  truetype_program.rs  type0.rs  type0_font.rs  type1.rs  type1_program.rs  type1c.rs
pdf/src/function/: exponential.rs  mod.rs  postscript.rs  sampled.rs  stitching.rs
pdf/src/geom/: bezier.rs  coordinate.rs  line.rs  mod.rs  path.rs  point.rs  rect.rs  rectangle.rs  sub_path.rs  subpath.rs
pdf/src/object/: array.rs  bool.rs  dictionary.rs  mod.rs  name.rs  number.rs  stream.rs  string.rs
pdf/tests/: test_xref.rs
tools/: Cargo.toml  trace.xml
tools/src/: main.rs
(+74 files in other folders)
