[package]
name = "pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
flate2 = "1.0.28"
# wait https://github.com/PistonDevelopers/freetype-rs/pull/266 tobe merged
freetype-rs = {git="https://github.com/rockyzhengwu/freetype-rs.git", branch = "fix"}
image = "0.24.7"
lazy_static = "1.4.0"
log = "0.4.20"
rand = "0.8.5"
thiserror = "1.0.51"
