[package]
name = "pdf"
version = "0.1.0"
edition = "2021"


[dependencies]
cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core.git", features = [
  "freetype","png"
] }
encoding_rs = "0.8.33"
env_logger = "0.10.1"
flate2 = "1.0.28"
freetype-rs = "0.36.0"
image = "0.25.0"
imageproc = "0.23.0"
lazy_static = "1.4.0"
log = "0.4.20"
rand = "0.8.5"
thiserror = "1.0.51"
